; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/lz32/extr_lzexpand_main.c_delete_file.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/lz32/extr_lzexpand_main.c_delete_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@OF_DELETE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"LZOpenFileA failed to delete '%s'\0A\00", align 1
@INVALID_FILE_ATTRIBUTES = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [53 x i8] c"GetFileAttributesA succeeded on deleted file ('%s')\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @delete_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @delete_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_3__, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = load i32, i32* @OF_DELETE, align 4
  %8 = call i64 @LZOpenFileA(i8* %6, %struct.TYPE_3__* %4, i32 %7)
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = icmp sge i64 %9, 0
  %11 = zext i1 %10 to i32
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @ok(i32 %11, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @LZClose(i64 %14)
  %16 = load i8*, i8** %2, align 8
  %17 = call i64 @GetFileAttributesA(i8* %16)
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @INVALID_FILE_ATTRIBUTES, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %23 = load i8*, i8** %22, align 8
  %24 = call i32 @ok(i32 %21, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.1, i64 0, i64 0), i8* %23)
  ret void
}

declare dso_local i64 @LZOpenFileA(i8*, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @ok(i32, i8*, i8*) #1

declare dso_local i32 @LZClose(i64) #1

declare dso_local i64 @GetFileAttributesA(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
